# rust-oauth-authorization-server

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: ci.yaml
.sqlx/: query-dd37a7e08e8408280838f1550c98e330b0834c9cfb1bd8f1b927de26ce899e6e.json
configuration/: base.yaml
migrations/: 20231014204422_create_clients_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: clients.rs  mod.rs
tests/: health_check.rs
